--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "lint": "next lint",
     "export": "next export"
   },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "next": "12.0.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
   "devDependencies": {
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
