--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "next-no-fines",
   "private": true,
+  "homepage": "https://rendow.github.io./next-no-fines/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
